--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sentry:stop": "bash scripts/sentry-local.sh stop",
     "sentry:logs": "bash scripts/sentry-local.sh logs",
     "sentry:status": "bash scripts/sentry-local.sh status",
+    "sentry:setup": "bash scripts/setup-sentry-frontend.sh",
     "remote:dev": "cd crates/remote && docker compose --env-file .env.remote up --build ; docker compose down -v",
     "remote:prepare-db": "cd crates/remote && bash scripts/prepare-db.sh",
     "remote:prepare-db:check": "cd crates/remote && bash scripts/prepare-db.sh --check"
