--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -45,6 +45,8 @@ services:
       SENTRY_REDIS_HOST: sentry-redis
       SENTRY_REDIS_PORT: 6379
       SENTRY_SINGLE_ORGANIZATION: 'true'
+      SENTRY_USE_KAFKA: 'false'
+      SENTRY_KAFKA_HOSTS: ''
     ports:
       - "9000:9000"
     volumes:
@@ -71,6 +73,8 @@ services:
       SENTRY_DB_PASSWORD: sentry
       SENTRY_REDIS_HOST: sentry-redis
       SENTRY_REDIS_PORT: 6379
+      SENTRY_USE_KAFKA: 'false'
+      SENTRY_KAFKA_HOSTS: ''
     volumes:
       - sentry-data:/var/lib/sentry/files
     networks:
@@ -92,6 +96,8 @@ services:
       SENTRY_DB_PASSWORD: sentry
       SENTRY_REDIS_HOST: sentry-redis
       SENTRY_REDIS_PORT: 6379
+      SENTRY_USE_KAFKA: 'false'
+      SENTRY_KAFKA_HOSTS: ''
     volumes:
       - sentry-data:/var/lib/sentry/files
     networks:
