1. The component name from an external package (which we don't control) 2. A git internal reference
The rename is complete! Let me provide a summary of what was changed:

## Summary

I have successfully renamed all occurrences of "vibe-kanban" to "task-copilot" throughout the codebase. Here's what was changed:

### Configuration Files
- **package.json** (root) - Already had `task-copilot` name
- **npx-cli/package-lock.json** - Updated package name and bin references
- **docker-compose.dev.yml** - Updated all container names and secret keys
- **.gitignore** - Updated ignore patterns

### Rust Code
- **crates/server/src/main.rs** - Renamed `VibeKanbanError` → `TaskCopilotError`
- **crates/server/src/lib.rs** - Updated commented cloud deployment type
- **crates/server/src/bin/mcp_task_server.rs** - Updated port file name
- **crates/server/src/mcp/task_server.rs** - Updated MCP server name
- **crates/server/src/routes/task_attempts.rs** - Updated commit message format
- **crates/utils/src/path.rs** - Updated test paths
- **crates/utils/src/port_file.rs** - Updated temp directory and port file names
- **crates/executors/src/executors/acp/session.rs** - Updated config directory
- **crates/review/src/config.rs** - Updated config file path
- **crates/review/src/claude_session.rs** - Updated test paths
- **crates/remote/** - Updated user agent strings from `VibeKanbanRemote` → `TaskCopilotRemote`

### Frontend Code
- **frontend/src/components/panels/PreviewPanel.tsx** - Updated GitHub links
- **frontend/src/components/tasks/TaskDetails/preview/NoServerContent.tsx** - Updated GitHub links
- **remote-frontend/src/pages/ReviewPage.tsx** - Updated CLI command example

### Documentation
- **docs/docs.json** - Updated site name, navigation links, GitHub URLs, social links
- **docs/integrations/vibe-kanban-mcp-server.mdx** → **docs/integrations/task-copilot-mcp-server.mdx** (renamed file)
  - Updated all references to Task Copilot throughout
  - Updated MCP server configuration exa

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,8 @@ remote-frontend/dist
 build-npm-package-codesign.sh
 
 npx-cli/dist
-npx-cli/vibe-kanban-*
-vibe-kanban-*.tgz
+npx-cli/task-copilot-*
+task-copilot-*.tgz
 
 # Development ports file
 .dev-ports.json
@@ -82,6 +82,6 @@ dev_assets
 /frontend/.env.sentry-build-plugin
 .ssh
 
-vibe-kanban-cloud/
+task-copilot-cloud/
 
 .jj
