--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "lexical": "^0.36.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "mermaid": "^11.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
