--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "fancy-ansi": "^0.1.3",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lexical": "^0.36.2",
