✔ Edit .env.example (+3)    ╭──────────────────────────────────────────────────────────────────────────────────────────────╮    │  4     BACKEND_PORT=8080                                                                     │    │  5     HOST=127.0.0.1                                                                        │    │  6                                                                                           │    │  7  +  # Docker Configuration (for docker-compose.yml)                                       │    │  8  +  PORT=3000                                                                             │    │  9  +                                                                                        │    │ 10     # Sentry Configuration (Local Development)                                            │    │ 11     # After starting docker-compose.dev.yml and creating a project in Sentry UI,          │    │ 12     # replace with your actual DSN from http://localhost:9000                             │    ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
Now let's test the Docker setup to ensure everything works:

✔ $ cat docker-compose.yml
    └ 28 lines...

✔ $ cat scripts/docker-up.sh
    └ 77 lines...

✔ $ cat scripts/docker-down.sh
    └ 56 lines...

Perfect! Now let's verify that the scripts are executable and create a quick reference document:

✔ $ ls -la scripts/docker-*.sh
    └ 3 lines...

✔ $ git --no-pager status --short
    └ 7 lines...

Excellent! Now let me create a DOCKER.md document with detailed instructions:

✔ Create DOCKER.md (+229)

Now let's verify the complete setup and run a quick validation:

✔ $ git --no-pager diff --stat
    └ 5 lines...

✔ $ docker compose config 2>&1 | head -30
    └ 31 lines...

Perfect! The docker-compose.yml is valid. Let me create one final summary and verify all files:

✔ $ git --no-pager status
    └ 17 lines...

✔ $ cat package.json | grep -A 5 "docker:"
    └

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 BACKEND_PORT=8080
 HOST=127.0.0.1
 
+# Docker Configuration (for docker-compose.yml)
+PORT=3000
+
 # Sentry Configuration (Local Development)
 # After starting docker-compose.dev.yml and creating a project in Sentry UI,
 # replace with your actual DSN from http://localhost:9000
