--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "sentry:logs": "bash scripts/sentry-local.sh logs",
     "sentry:status": "bash scripts/sentry-local.sh status",
     "sentry:setup": "bash scripts/setup-sentry-frontend.sh",
+    "docker:up": "bash scripts/docker-up.sh",
+    "docker:down": "bash scripts/docker-down.sh",
+    "docker:logs": "docker compose logs -f task-copilot",
+    "docker:restart": "docker compose restart task-copilot",
     "remote:dev": "cd crates/remote && docker compose --env-file .env.remote up --build ; docker compose down -v",
     "remote:prepare-db": "cd crates/remote && bash scripts/prepare-db.sh",
     "remote:prepare-db:check": "cd crates/remote && bash scripts/prepare-db.sh --check"
