Adjust application that sentry works

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ SENTRY_DSN=http://YOUR_KEY@localhost:9000/PROJECT_ID
 # Frontend Sentry DSN
 VITE_SENTRY_DSN=http://YOUR_KEY@localhost:9000/PROJECT_ID
 
+# Optional: Sentry traces sample rate (0.0 to 1.0, defaults to 1.0)
+# SENTRY_TRACES_SAMPLE_RATE=1.0
+
 # Optional: Custom Sentry secret key for docker-compose
 # SENTRY_SECRET_KEY=your-custom-secret-key
 
